General content - initial version

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,7 +14,9 @@
         {% endif %}
 
         <div class="content is-small has-text-centered">
-            <p class="">Theme built by <a href="https://www.csrhymes.com">C.S. Rhymes</a></p>
+            <p class="">OpenAPI Center - Originally by Ricardo SS<br/> 
+                Site theme by <a href="https://www.csrhymes.com">C.S. Rhymes</a>
+            </p>
         </div>
     </div>
 </footer>
